# CXXChessEngine

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform-debug.yml  cmake-single-platform.yml
dependencies/: CMakeLists.txt
docs/: Doxyfile
docs/sphinx/: 404.rst  conf.py  index.rst  requirements.txt
docs/sphinx/board/: attack_generator.rst  board_docs.rst  board_representation.rst  chessboard.rst  legal_move_generator.rst  legal_moves.rst  old.rst
docs/sphinx/board/old_gen/: move_generator.rst
docs/sphinx/board/pieces/: bishop.rst  king.rst  knight.rst  pawn.rst  piece.rst  queen.rst  rook.rst
source/include/chess_engine/: chess_engine.h  chess_error.h  chess_game.cpp  chess_game.h  constants.h
source/include/chess_engine/board/: bishop.h  bitboard.h  board_rep.h  chess_board.h  king.h  knight.h  move_generator.h  pawn.h  piece.h  queen.h  rook.h
source/include/chess_gui/: chess_gui.h  chess_gui_main_window.h  chess_gui_window.h  fonts.h  gui_container.h  gui_elements.h  gui_game.h  gui_inner_window.h  gui_menubar.h  gui_object.h  gui_popup_window.h  object.h  renderer.h  textures.h  window.h
source/src/: main.cpp
source/src/chess_engine/: chess_engine.cpp  chess_game.cpp
source/src/chess_engine/board/: attack_generator.cpp  bishop.cpp  bitboard.cpp  black_pawn.cpp  board_rep.cpp  chess_board.cpp  king.cpp  knight.cpp  legal_move_generator.cpp  move_generator.cpp  pawn.cpp  queen.cpp  rook.cpp  white_pawn.cpp
source/src/chess_engine/board/old/: attack_generator.cpp  legal_move_generator.cpp  move_generator.cpp
source/src/chess_gui/: chess_gui.cpp  chess_gui_main_window.cpp  chess_gui_window.cpp  gui_container.cpp  gui_elements.cpp  gui_inner_window.cpp  gui_main.cpp  gui_menubar.cpp  gui_popup_window.cpp
tests/: CMakeLists.txt
tests/chess_engine/: low_level_test_functions.cpp
tests/chess_engine/board/: attack_generator_test.cpp  bishop_test.cpp  board_rep_test.cpp  king_test.cpp  knight_test.cpp  legal_move_generator_test.cpp  pawn_test.cpp  perft_test.cpp  queen_test.cpp  rook_test.cpp
tests/chess_engine/board/old/: attack_generator_test.cpp  legal_move_generator_test.cpp  move_generator_test.cpp
tests/include/: low_level_test_functions.h
